// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InfiniteList /> on Container expect to render with default props 1`] = `
<div
  className="infinite-list"
  onScroll={[Function]}
  style={
    Object {
      "height": "750px",
      "overflowY": "scroll",
    }
  }
>
  <div>
    Child 1
  </div>
  <div>
    Child 2
  </div>
  <div>
    Child 3
  </div>
</div>
`;

exports[`<InfiniteList /> on Container expect to render with given props 1`] = `
<ul
  className="custom-infinite-list"
  onScroll={[Function]}
  style={
    Object {
      "height": "750px",
      "overflowY": "scroll",
    }
  }
>
  <li>
    Child 1
  </li>
  <li>
    Child 2
  </li>
  <li>
    Child 3
  </li>
</ul>
`;
